--- a/oscar/static/less/page/product_lists.less
+++ b/oscar/static/less/page/product_lists.less
@@ -84,6 +84,15 @@
     }
   }
 }
+/* carosel product list mods */
+.es-carousel {
+  .product_pod {
+    height:auto;
+    .product_price {
+      position:static;
+    }
+  } 
+}
 /* Product list image container */
 .image_container {
   width:100%;
