--- a/oscar/static/less/responsive.less
+++ b/oscar/static/less/responsive.less
@@ -249,6 +249,41 @@
       padding:0px;
     }
   }
+  .navbar #browse {
+    ul {
+      width:auto!important;
+    }
+    li {
+      border:none!important;
+    }
+    .dropdown-menu {
+      margin: 0;
+    }
+    .nav.sub-nav {
+      position:static;
+      visibility:visible;
+      li {
+        a {
+          padding: 6px 15px;
+        }
+      }
+    }
+  }
+  #browse .dropdown-menu > li:hover .sub-nav,
+  #browse .dropdown-menu > li > a:hover .sub-nav,
+  #browse .dropdown-menu > li:hover {
+    background:none;
+    border:none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-background-clip: none;
+    -moz-background-clip: none;
+    background-clip: none;
+  }
+  .header {
+    text-shadow:none;
+  }
 
 }
 
