--- a/oscar/templates/500.html
+++ b/oscar/templates/500.html
@@ -1,1 +1,42 @@
-<p>Error occurred</p>
+{% extends "base.html" %}
+{% block extrahead %}
+    {% if product %}
+    <!-- Colorbox for image galleries -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}js/colorbox/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+    {% endif %}
+    <!-- Responsive - will need to be minified -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/responsive.css" />
+{% endblock %}
+{% block layout %}
+<div class="navbar accounts">
+	<div class="navbar-inner">
+		<div class="container-fluid">
+			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+			<ul class="nav pull-right">
+				<li><a href="#">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+				{% if user.is_authenticated %}
+					{% if user.is_staff %}
+					<li><a href="{% url dashboard:index %}">Dashboard</a></li>
+					{% endif %}
+				<li><a href="{% url customer:summary %}">Profile</a></li>
+				<li><a href="{% url customer:logout %}">Logout</a></li>
+				{% else %}
+				<li><a href="{% url customer:login %}">Login</a></li>
+				{% endif %}
+			</ul>
+		</div>
+    </div><!-- /navbar-inner -->
+</div><!-- /navbar -->
+
+<div class="container">
+	<div class="hero-unit">
+		<h1>HTTP 500 - Internal Server Error!</h1>
+		<p>The page you are looking for isn't here. Please try again, use the navigation above or feel free to send us your feedback. Thank you.</p>
+		<p>
+			<a class="btn btn-primary btn-large" onClick="javascript:history.go(-1);">Go back to previous page</a>
+		</p>
+	</div>
+</div>
+{% endblock %}
