--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -7,10 +7,5 @@
 {% endblock %}
 
 {% block dashboard_content %}
-<p>What do you want to do?</p>
-<ul>
-    {% for item in menu_items %}
-    <li><a href="{{ item.url }}">{{ item.description }}</a></li>
-    {% endfor %}
-</ul>
+<p>Choose an option from the left.</p>
 {% endblock %}
