--- a/oscar/templates/customer/address-create.html
+++ b/oscar/templates/customer/address-create.html
@@ -13,7 +13,7 @@
 <div class="sub-header">
     <h3>Add address</h3>
 </div>
-<form action="." method="post" class="form-stacked">
+<form action="." method="post" class="form-horizontal">
     {% csrf_token %}
 
 	<input type="hidden" name="test" value="v1" />
