--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -6,7 +6,7 @@
 <div class="page-header action">
     <h2>Order management</h2><a href="#" class="pull_out">Search Orders</a>
     <div class="orders_search">
-        <form action="." method="get">
+        <form action="." method="get" class="form-horizontal">
             {% include "partials/form_fields.html" with form=form %}
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary">Search</button>
