--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -15,10 +15,10 @@
                 <a href="{% url promotions:home %}" class="brand">Oscar // Domain-driven e-Commerce for Django</a>
                 <ul class="nav pull-right">
                     {% if user.is_authenticated %}
-                        <li><a href="{% url customer:summary %}">Profile</a></li>
-                        <li><a href="{% url customer:logout %}">Logout</a></li>
+                        <li><a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
+        				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
                     {% else %}
-                        <li><a href="{% url customer:login %}">Login</a></li>
+                        <li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
                     {% endif %}
                 </ul>
             </div>
