--- a/oscar/templates/partials/footer.html
+++ b/oscar/templates/partials/footer.html
@@ -2,7 +2,9 @@
     {% block footer %}
         <ul class="footer_links">   
             <!-- Load flatpages -->
-            <li class="top_page"><a href="#">Top of the page</a></li>            
+            <li><a href="#about">About</a></li>
+			<li><a href="#contact">Contact</a></li>
+            <li class="top_page"><a href="#" class="app-ico ico_fill_up">Top of the page</a></li>            
         </ul>
     {% endblock %}
 </footer>
