removed unused css and base_dashboard.html, added form-horizontal to checkout forms

--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -89,7 +89,7 @@
 </ul>
 {% endif %}
 
-<form action="{% url basket:vouchers-add %}" method="post" class="form-stacked">
+<form action="{% url basket:vouchers-add %}" method="post" class="form-horizontal">
     {% csrf_token %}
 	{% include "partials/form_fields.html" with form=voucher_form %}
     <div class="form-actions">
